--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body class="gradient-animation">
     <header class="header">
-        <a href="index.html" class="logo"><ion-icon name="construct-outline"></ion-icon>yxha</a>
+        <a href="index.html" class="logo"><ion-icon name="construct-outline"></ion-icon></a>
     </header>
 
     <section class="home">
         <div class="content">
             <h2 class="animated-text">Yxha's official site</h2>
             <p>Welcome, this is where I upload my content and work.</p>
-            <a href="media.html" class="main-button">Get Started</a>
+            <a href="media.html" class="main-button">Discord Invite</a>
         </div>
     </section>
 
