--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>skidrow</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" href="assets/web.ico">
 </head>
@@ -15,9 +15,9 @@
 
     <section class="home">
         <div class="content">
-            <h2 class="animated-text">Yxha's official site</h2>
-            <p>Welcome, this is where I upload my content and work.</p>
-            <a href="media.html" class="main-button">Discord Invite</a>
+            <h2 class="animated-text">script kiddies</h2>
+            <p>script kiddies discord invite</p>
+            <a href="https://discord.gg/skidrow" class="main-button">Discord Invite</a>
         </div>
     </section>
 
