--- a/404.html
+++ b/404.html
@@ -9,15 +9,11 @@
     <link rel="icon" href="assets/web.ico">
 </head>
 <body class="gradient-animation">
-    <header class="header">
-        <a href="index.html" class="logo"><ion-icon name="construct-outline"></ion-icon>yxha</a>
-    </header>
-
     <section class="content-section">
         <div class="content">
             <h2 class="animated-text">404 Not Found</h2>
             <p>The page you are looking for does not exist.</p>
-            <a href="index.html" class="main-button">Go Back Home</a>
+            <a href="index.html" class="main-button">Go Back</a>
         </div>
     </section>
 
