--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="home">
         <div class="content">
             <h2 class="animated-text">script kiddies</h2>
-            <p>script kiddies discord invite</p>
+            <p>the best lua, config, tool provider on discord all for free join now!</p>
             <a href="https://discord.gg/skidrow" class="main-button">Discord Invite</a>
         </div>
     </section>
