--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <h2 class="animated-text">script kiddies</h2>
             <p>the best lua, config, tool provider on discord all for free join now!</p>
-            <a href="https://discord.gg/skidrow" class="main-button">Discord Invite</a>
+            <a href="https://discord.gg/SxwzAkngpT" class="main-button">Discord Invite</a>
         </div>
     </section>
 
